# python_module00-10

./: README.md  ft_alembic_0.py  ft_alembic_1.py  ft_alembic_3.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_1.py  ft_transmutation_0.py  tournament.py
alchemy/: __init__.py  elements.py
alchemy/grimoire/: __init__.py  light_validator.py
alchemy/transmutation/: __init__.py  recipes.py
ex0/: data_processor.py  factory.py  ft_first_exception.py  ft_garden_intro.py
ex1/: .ft_garden_data.py.swp  capability.py  ft_archive_creation.py  ft_garden_data.py  loading.py
ex2/: ft_different_errors.py  ft_plant_growth.py  ft_stream_management.py  strategy.py
ex3/: ft_achievement_tracker.py  ft_custom_errors.py
ex4/: ft_garden_security.py  ft_inventory_system.py
ex5/: ft_plant_types.py
ex6/: ft_count_harvest_recursive.py  ft_data_alchemist.py  ft_garden_analytics.py
py10/: README.md
py10/ex0/: lambda_spells.py
py10/ex1/: higher_magic.py
py10/ex2/: scope_mysteries.py
py10/ex3/: functools_artifacts.py
py10/ex4/: decorator_mastery.py
python_module00/: README.md
python_module00/ex2/: ft_plot_area.py
python_module01/: README.md
python_module02/: README.md
python_module03/: README.md
python_module04/: README.md
python_module05/: README.md
python_module06/: README.md  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_4.py  ft_alembic_5.py  ft_kaboom_0.py  ft_transmutation_1.py  ft_transmutation_2.py
python_module07/: battle.py  capacitor.py
python_module08/ex1/: loading.py  pyproject.toml
python_module09/: README.md
(+30 files in other folders)
