[tool.poetry]
name = "matrix_loading"
version = "0.1.0"
description = "Matrix Data Loading Program"
authors = ["Anjou Makino <amakino@student.42tokyo.jp>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.1.0"
numpy = "1.25.0"
matplotlib = "3.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
